# fourier_actuator_sdk

./: .gitattributes  .gitgnore  .gitignore  README.md  README_CN.md
Linux-x86_64/cpp/: fsav2.h
Linux-x86_64/cpp/example/: CMakeLists.txt  get_error.cpp  get_pvctte.cpp  get_temp_vbus.cpp  multi_fsa.cpp  position_control.cpp  setpvc_timeout_protect.cpp  torque_control.cpp
Linux-x86_64/python/fi_fsa/: __init__.py
Linux-x86_64/python/fi_fsa/v1/: fi_config_v1.py  fi_fsa_v1.py
Linux-x86_64/python/fi_fsa/v2/: fi_fsa_predefine_v2.py  fi_fsa_v2.py
Linux-x86_64/python/v1/example/: demo_comm_config_set.py  demo_control_current_mode.py  demo_control_position_ff_mode.py  demo_control_position_mode.py  demo_control_velocity_mode.py  demo_ctrl_config_get.py  demo_ctrl_config_set.py  demo_ctrl_gr_max_current_set.py  demo_fast_control_position_mode.py  demo_fast_control_velocity_mode.py  demo_fast_set_enable.py  demo_flag_of_operation_set.py  demo_new_motor_test.py  demo_ota.py  demo_ota_cloud.py  demo_ota_custom.py  demo_ota_devel.py  demo_ota_driver.py  demo_ota_driver_devel.py  demo_ota_test.py  demo_pid_param_imm_get.py  demo_pid_param_imm_set.py  demo_pid_param_set.py  demo_reboot_actuator.py  demo_set_calibrate_encoder.py
Linux-x86_64/python/v2/example/: demo_control_param_imm_get.py  demo_control_position_mode_pd.py  demo_control_velocity_mode.py  demo_ctrl_config_get.py  demo_ctrl_config_save.py  demo_ctrl_config_set.py  demo_ctrl_get_pvc_group.py  demo_enable_set.py  demo_fast_control_velocity_mode.py  demo_fast_get_error.py  demo_fast_get_pvc.py  demo_fast_set_clear_fault.py  demo_fast_set_pd_position.py  demo_frock_test.py  demo_get_pvc.py  demo_lookup_abs_encoder.py  demo_lookup_ctrlbox.py  demo_new_motor_test.py  demo_ota_driver_custom.py  demo_ota_driver_test.py  demo_ota_test.py  demo_pid_param_imm_set.py  demo_pid_param_set.py  demo_reboot_actuator.py  demo_set_subscribe.py  demo_set_torque_limit_max.py
Windows-x86_64/cpp/: fsav3.exp  fsav3.h  fsav3.lib
Windows-x86_64/cpp/example/: CMakeLists.txt  get_error.cpp  get_temp_vbus.cpp  multi_fsa.cpp  position_control.cpp  subscribe.cpp  torque_control.cpp
Windows-x86_64/python/: README.md
Windows-x86_64/python/fi_fsa/: README.md
Windows-x86_64/python/v1/example/: demo_clear_fault.py  demo_comm_config_get.py  demo_control_param_get.py  demo_control_param_imm_get.py  demo_control_param_imm_set.py  demo_control_param_set.py  demo_ctrl_config_save.py  demo_ctrl_get_pvc_group.py  demo_disable_set.py  demo_enable_set.py  demo_fast_control_current_mode.py  demo_fast_get_error.py  demo_fast_get_pvc.py  demo_fast_set_clear_fault.py  demo_fast_set_disable.py  demo_flag_of_operation_get.py  demo_get_ntc_temperature.py  demo_get_pvc.py  demo_get_state.py  demo_lookup.py  demo_lookup_abs_encoder.py  demo_lookup_actuator.py  demo_lookup_ctrlbox.py  demo_ota_driver_cloud.py  demo_ota_driver_custom.py  demo_ota_driver_test.py  demo_pid_param_get.py  demo_reboot.py
Windows-x86_64/python/v2/example/: demo_clear_fault.py  demo_comm_config_get.py  demo_comm_config_set.py  demo_control_current_mode.py  demo_control_param_get.py  demo_control_param_imm_set.py  demo_control_param_set.py  demo_control_position_ff_mode.py  demo_control_position_mode.py  demo_disable_set.py  demo_fast_control_current_mode.py  demo_fast_control_position_mode.py  demo_fast_get_pvct.py  demo_fast_set_disable.py  demo_fast_set_enable.py  demo_fast_set_pd_mode.py  demo_flag_of_operation_get.py  demo_flag_of_operation_set.py  demo_get_ntc_temperature.py  demo_get_pvct.py  demo_get_state.py  demo_lookup.py  demo_lookup_actuator.py  demo_ota.py  demo_ota_cloud.py  demo_ota_custom.py  demo_ota_devel.py  demo_ota_driver.py  demo_ota_driver_cloud.py  demo_ota_driver_devel.py  demo_pid_param_get.py  demo_pid_param_imm_get.py  demo_reboot.py  demo_set_calibrate_encoder.py  demo_set_fsa_abs_zero.py  demo_set_inertia_ff.py
doc/CN/: fourier_actuator_intro.md  fourier_actuator_sdk_cpp_api.md  fourier_actuator_sdk_python_api.md  fourier_actuator_sdk_python_demo.md
doc/EN/: fourier_actuator_intro.md  fourier_actuator_sdk_cpp_api.md  fourier_actuator_sdk_python_api.md  fourier_actuator_sdk_python_demo.md
example/cpp/: CMakeLists.txt  demo_get_info.cpp  demo_position_control.cpp  demo_subscribe.cpp  demo_torque_control.cpp
example/python/: demo_get_info.py  demo_position_control.py  demo_subscribe.py  demo_torque_control.py
